# hama

./: .gitignore  CHANGELOG.md  LICENSE  MAINTAINING.md  Makefile  README.md  build.zig  llms.txt
assets/: g2p_vocab.json
examples/: python_asr.py  python_live_asr_silero_vad.py  python_live_stt_silero_vad.py
python/: README.md  compile_wasm.py  example.py  pyproject.toml
python/src/: g2p.py
python/src/hama/: __init__.py  _engine.py  asr.py  hama-g2p.wasm  inference.py  jamo.py  p2g.py  pronunciation.py  tokenizer.py  vocab.py
python/src/hama.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
python/src/hama/_libs/darwin-arm64/: libhama.dylib
python/src/hama/_libs/darwin-x86_64/: libhama.dylib
python/src/hama/assets/: decoder_step.hama  decoder_step.onnx  encoder.onnx
python/tests/: g2p_test.py  test_asr.py  test_asr_spans.py  test_golden_parity.py  test_inference.py  test_jamo.py  test_p2g_golden.py  test_pronunciation.py  test_split_assets.py
src/: g2p.zig  g2p_model.zig  g2p_tokenizer.zig  jamo.zig  llama2.zig
tests/: g2p_test.zig  g2p_test_single.zig  jamo_test.zig
tests/fixtures/: asr_golden.json  g2p_golden.json  p2g_golden.json
tools/: build_libs.sh  capture_golden.py  convert_onnx.py  convert_torch.py  dump_oracle.py  hama_pack.py  make_fixtures.py
ts/: example.js  package.json  tsconfig.base.json  tsconfig.browser.json  tsconfig.node.json
ts/demo/: index.html  main.ts
ts/scripts/: live-asr-silero.ts  validate-asr-model.ts  validate-browser-asr-model.ts  validate-browser-model.ts  validate-model.ts  validate-split-model.ts
ts/src/: asr.ts  browser.ts  ctc.ts  engine.browser.ts  engine.node.ts  engine.ts  index.ts  jamo.ts  p2g-text.ts  p2g.ts  pronunciation.ts  tokenizer.ts
ts/src/assets/: decoder_step.onnx  encoder.onnx  g2p_vocab.json  hama.wasm  p2g_vocab.json
ts/tests/: asr.browser.test.ts  asr.test.ts  ctc.test.ts  g2p.test.ts  golden.test.ts  jamo.test.ts  p2g.test.ts  pronunciation.test.ts
typescript/: .parcelrc  README.md  build.ts  bun.lockb  embed_wasm.ts  index.ts  package-lock.json  package.json  tsconfig.json
typescript/src/: g2p.ts  hama-g2p-wasm.ts  hama-jamo-wasm.ts  index.ts  jamo.ts  onnx.d.ts  wasm-utils.ts
typescript/src/types/: onnx.d.ts
typescript/tests/: g2p.test.ts  jamo.test.ts
zig/: build.zig  build.zig.zon
zig/models/: encoder.hama
zig/src/: f16.zig  main_native.zig  main_wasm.zig  pkg.zig  root.zig
zig/src/kernels/: activations.zig  conv1d.zig  gather.zig  gru.zig  layernorm.zig  matmul.zig  reduce.zig  softmax.zig
zig/src/models/: asr.zig  g2p.zig  g2p_decoder.zig  g2p_encoder.zig  p2g.zig
zig/src/models/fixtures/: asr_short.hama  decoder_step0.hama  decoder_step1.hama  encoder_hello.hama  g2p_hello.hama  p2g_greedy.hama  p2g_stage.hama
