[project]
name = "hama"
version = "1.3.1"
description = "Cross-platform grapheme-to-phoneme inference library powered by ONNX."
readme = "README.md"
requires-python = ">=3.9"
license = {text = "Apache-2.0"}
authors = [
  {name = "Seongmin Park"}
]
dependencies = [
  "numpy>=1.24",
  "onnxruntime>=1.17",
]

[project.urls]
Homepage = "https://github.com/hamanlp/hama"

[project.optional-dependencies]
test = [
  "pytest>=7.4",
]

[tool.uv]
package = true

[tool.setuptools.package-data]
"hama.assets" = ["*.onnx", "*.json"]

[tool.pytest.ini_options]
addopts = "-q"
pythonpath = ["src"]
