[project]
name = "hama"
version = "1.3.12"
description = "Cross-platform grapheme-to-phoneme and phoneme-ASR inference library powered by ONNX."
readme = "README.md"
requires-python = ">=3.9"
license = {text = "Apache-2.0"}
keywords = ["g2p", "asr", "phoneme", "onnx", "onnxruntime", "korean"]
authors = [
  {name = "Seongmin Park"}
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: Apache Software License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
  "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
  "numpy>=1.24",
  "onnxruntime>=1.20",
]

[project.urls]
Homepage = "https://hamalnp.org"
Repository = "https://github.com/hamanlp/hama"
Issues = "https://github.com/hamanlp/hama/issues"

[project.optional-dependencies]
test = [
  "pytest>=7.4",
]
live = [
  "sounddevice>=0.4",
  "silero-vad>=6.2,<7",
]

[tool.uv]
package = true

[tool.setuptools.package-data]
"hama.assets" = ["*.onnx", "*.json"]

[tool.pytest.ini_options]
addopts = "-q"
pythonpath = ["src"]
